@@ -6,3 +6,4 @@ tail =
 [test_ubuntu_searchplugins.js]
 [test_locale_matchOS.js]
 [test_ubuntu_useragent.js]
+[test_langpack_load.js]
